+ Docker is ready